fixed z-index issue

--- a/recipe-search/src/components/NavBar/NavBar.module.scss
+++ b/recipe-search/src/components/NavBar/NavBar.module.scss
@@ -4,7 +4,9 @@
   position: fixed;
   display: flex;
   width: 100%;
+  transition: all 0.3s;
   height: 80px;
+  z-index: 30;
 }
 
 .nav {
@@ -63,6 +65,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   padding: 25px;
   position: absolute;
   left: 0;
@@ -90,7 +93,6 @@
 }
 
 .textPlaceholder {
-  width: 200px;
   height: 20px;
   margin: 0;
   padding: 0;
@@ -124,7 +126,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  text-align: left;
+  text-align: center;
   margin: 0;
   padding: 0;
   width: 100%;
